[package]
name = "tuneweather"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std  = {version = "1.11.0", features = ["attributes"]}
# コマンドラインパーサー
clap = { version = "3.1.15", features = ["derive"] }
# JSONのシリアライズ/デシリアライズ用
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
# httpクライアント
surf = "2.3.2"
